--- a/manuscript/contact.qmd
+++ b/manuscript/contact.qmd
@@ -6,6 +6,7 @@ For questions about the ECTO project, please contact:
 
 - **Project lead:** Noah van Dongen
 - **Affiliation:** Erasmus University Rotterdam
-- **Repository:** <https://github.com/<ORG_OR_USER>/<REPO>>
+- **Repository:** <https://github.com/NNNvD/ECTO>
 
 If you have feedback on documents, methods, or logbook entries, please open an issue in the repository.
+If you have any questions, please email me at <n.n.n.vandongen@gmail.com>
