--- a/manuscript/expert-identification.qmd
+++ b/manuscript/expert-identification.qmd
@@ -2,5 +2,5 @@
 title: "Expert Identification"
 ---
 
-```{include-file} includes/expertIdentification.md
+```{include-file} ../docs/expertIdentification.md
 ```
