--- a/manuscript/project-description.qmd
+++ b/manuscript/project-description.qmd
@@ -2,5 +2,5 @@
 title: "Project Description"
 ---
 
-```{include-file} includes/projectDescription.md
+```{include-file} ../docs/projectDescription.md
 ```
