--- a/manuscript/project-description.qmd
+++ b/manuscript/project-description.qmd
@@ -2,5 +2,4 @@
 title: "Project Description"
 ---
 
-```{include-file} ../docs/projectDescription.md
-```
+{{< include ../docs/projectDescription.md >}}
